finding layout bugs

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -940,9 +940,9 @@ background-clip: text;
 
 .img-frame{
     position: absolute;
-    right: 10px;
-    bottom: -20px;
-    border: 10px solid rgba(255, 103, 0, 0.5);
+    right: 100px;
+    bottom: -10px;
+    border: 10px solid rgba(0, 51, 102,0.5);
     width: 30vw;
     height: 45vw;
     z-index: 11;
@@ -950,14 +950,14 @@ background-clip: text;
 }
 
 .frame2{
-    right: 20px;
+    right: 120px;
     bottom: -40px;
     z-index: 5;
     border: none;
     background: linear-gradient(180deg,#893700,#000);
 }
 .frame3{
-    right: 30px;
+    right: 130px;
     bottom: -60px;
     opacity: 0.5;
     z-index: 4;
@@ -966,7 +966,7 @@ background-clip: text;
     
 }
 .frame4{
-    right: 40px;
+    right: 140px;
     bottom: -80px;
     opacity: 0.3;
     z-index: 4;
@@ -981,7 +981,7 @@ background-clip: text;
     position: absolute;
     bottom: -1px;
     width: 30vw;
-    right: 0;
+    right: 100px;
     z-index: 10;
 }
 
@@ -990,28 +990,33 @@ background-clip: text;
         margin-top: 300px;
     }
 
+    .section--about h2{
+        max-width: 30%;
+    }
+
     .author-img{
         width: 50vw;
-        bottom: -20px;
+        bottom: 0px;
+        right: 50px;
     }
 
     .img-frame{
-        right: 5px;
-        bottom: -10px;
+        right: 50px;
+        bottom: 0px;
         width: 50vw;
         height: 75vw;
     }
 
     .frame2{
-        right: 10px;
+        right: 60px;
         bottom: -20px;
     }
     .frame3{
-        right: 15px;
+        right: 65px;
         bottom: -30px;
     }
     .frame4{
-        right: 20px;
+        right: 70px;
         bottom: -40px;
     }
 
@@ -1075,6 +1080,10 @@ input:-webkit-autofill{
 
 .input:focus{
     outline: none;
+}
+
+* {
+    outline: 1px solid #f00 !important;
 }
 
 
